# TW_otameshi

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: android_cleaned.csv  android_cleaned_mecab.csv  android_cleaned_mecab_with_topics.csv
data/raw/: android.json  ios.json
models/android_topic_model/: config.json  ctfidf.safetensors  ctfidf_config.json  topic_embeddings.safetensors  topics.json
notebooks/: 01_data_preprocessing.ipynb  01_review_ classification.ipynb  02_morphological_analysis.ipynb  03_clustering.ipynb  04_time_series_analysis.ipynb  05_reorder_review.ipynb  reorder_review.ipynb
